--- a/FireCams.html
+++ b/FireCams.html
@@ -31,30 +31,6 @@ tr,td {
     padding-top: 0px;
     valign: top;
 }
-#weatherTable{
-    white-space: nowrap;
-    display: block;
-    padding: 0px
-    table-layout: auto;
-    border-collapse: collapse;
-    width: auto;
-    text-align: left;
-}
-#weatherTable td, #weatherTable tr, #weatherTable th{
-    border-collapse: collapse;
-    border: 1px solid black;
-    table-layout: fixed;
-    background-color: #f5f5f5;
-}
-#NWS{
-    width: 100%;
-    height: 500px;
-    background-color: #f5f5f5;
-    white-space: pre;
-    font-family: Source Code Pro;
-    font-size: 75%;
-    overflow: auto;
-}
 .cameraView{
     width: 100%;
 }
@@ -119,16 +95,11 @@ tr,td {
 }
 #day-panel div {
     width: 10em;
+    z-index: 1000;
 }
-.mapToolTip {
-    background-color: black;
-
-}
-.leaflet-tooltip-left.mapToolTip::before {
-    border-left-color: cyan;
-}
-.leaflet-tooltip-right.mapToolTip::before {
-    border-right-color: cyan;
+#road-search{
+    position: relative;
+    
 }
 /* Tooltip container */
 .tooltip {
@@ -194,6 +165,31 @@ crossorigin=""></script>
 <table>
     <tr>
         <td>
+            <div id='road-search'>
+                <label for="forest">Forest: </label>
+                <select name='forest' id='forest'>
+                    <option value='0501'>ANF</option>
+                    <option value='0502'>CNF</option>
+                    <option value='0503' selected="selected">ENF</option>
+                    <option value='0504'>INF</option>
+                    <option value='0505'>KNF</option>
+                    <option value='0506'>LNF</option>
+                    <option value='0507'>LPF</option>
+                    <option value='0508'>MNF</option>
+                    <option value='0509'>MDF</option>
+                    <option value='0510'>SRF</option>
+                    <option value='0511'>PNF</option>
+                    <option value='0512'>BDF</option>
+                    <option value='0513'>SQF</option>
+                    <option value='0514'>SHF</option>
+                    <option value='0515'>SNF</option>
+                    <option value='0516'>STF</option>
+                    <option value='0517'>TNF</option>
+                    <option value='0519'>TMU</option>
+                </select>
+                <input id='search_bar' type='text'>
+                <span id='search-status' style='color:#bababa;font-size:75%'>Type a road name or id and press Enter to search</span>
+            </div>
             <div id='mapDiv' style='height:100px;'>
                 <div id='map'>
                     <button id='refresh' class="ui-button ui-widget ui-corner-all" style='width:20px;height:20px;padding:0;' title='Fullscreen'><span class="ui-icon ui-icon-arrow-4-diag"></span></button>
@@ -233,5 +229,15 @@ crossorigin=""></script>
 <script>
 // refresh the cameras every 10 seconds
 setInterval(refreshCam, 10 * 1000);
+// road search event
+var input = document.getElementById("search_bar");
+input.addEventListener("keyup", function(event) {
+    event.preventDefault();
+    if (event.keyCode === 13) {
+        var road = document.getElementById('search_bar').value
+        var security_id = document.getElementById('forest').value
+        roadQuery(security_id, road);
+    }
+});
 </script>
 </html>
