--- a/FireCams.html
+++ b/FireCams.html
@@ -35,6 +35,7 @@ tr,td {
     width: 100%;
 }
 #mapDiv{
+    position: relative;
     width: 100%;
     height: 500px
     max-height: 500px;
@@ -67,7 +68,7 @@ tr,td {
     top: 5px;
     right: 5px;
 }
-#map .ui-button {
+#mapDiv .ui-button {
     position: absolute;
     top: 5px;
     right: 5px;
@@ -98,8 +99,10 @@ tr,td {
     z-index: 1000;
 }
 #road-search{
-    position: relative;
-    
+    position: absolute;
+    top: 5px;
+    left: 60px;
+    z-index: 1000;
 }
 /* Tooltip container */
 .tooltip {
@@ -132,11 +135,37 @@ tr,td {
 .tooltip:hover .tooltiptext {
     visibility: visible;
 }
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    font-size: 83%;
+    display: none;
+    position: absolute;
+    background-color: rgba(255,255,255,0.8);
+    min-width: 48ch;
+    max-height: 200px;
+    overflow: auto;
+    z-index: 1001;
+}
+/* Links inside the dropdown */
+.dropdown-content table{
+    white-space: nowrap;
+    overflow: hidden;
+    color: black;
+    cursor: pointer;
+    width: 100%;
+    padding-left: 1px;
+}
 </style>
 <head>
 <title>Fire Dashboard</title>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <!--<meta http-equiv="refresh" content="60" />  Page refresh --> 
+<!-- google ajax CDN -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"></link>
 <script
@@ -144,17 +173,25 @@ tr,td {
     integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
     crossorigin="anonymous"></script>
 <!-- Load Leaflet from CDN -->
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
-integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css"
+integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
 crossorigin=""/>
-<script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
-integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
+<script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
+integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
 crossorigin=""></script>
 <!-- Load Esri Leaflet from CDN -->
-<script src="https://unpkg.com/esri-leaflet@2.2.2/dist/esri-leaflet.js"
-integrity="sha512-cll/dcqNKG7yfQBrTbRNzGQ70Bh4m+J5jnvU97tPyMnWsD1Ry+CXi0JE+T7Rk54pdJEYlRgXtpwxa9sUqzUAyg=="
+<script src="https://unpkg.com/esri-leaflet@2.2.3/dist/esri-leaflet.js"
+integrity="sha512-YZ6b5bXRVwipfqul5krehD9qlbJzc6KOGXYsDjU9HHXW2gK57xmWl2gU6nAegiErAqFXhygKIsWPKbjLPXVb2g=="
 crossorigin=""></script>
-<!-- Load Leaflet AJAX from CDN -->
+<script src="https://unpkg.com/esri-leaflet-renderers@2.0.6"></script>
+<!-- Load Esri Leaflet Geocoder from CDN -->
+<link rel="stylesheet" href="https://unpkg.com/esri-leaflet-geocoder@2.2.13/dist/esri-leaflet-geocoder.css"
+integrity="sha512-v5YmWLm8KqAAmg5808pETiccEohtt8rPVMGQ1jA6jqkWVydV5Cuz3nJ9fQ7ittSxvuqsvI9RSGfVoKPaAJZ/AQ=="
+crossorigin="">
+<script src="https://unpkg.com/esri-leaflet-geocoder@2.2.13/dist/esri-leaflet-geocoder.js"
+integrity="sha512-zdT4Pc2tIrc6uoYly2Wp8jh6EPEWaveqqD3sT0lf5yei19BC1WulGuh5CesB0ldBKZieKGD7Qyf/G0jdSe016A=="
+crossorigin=""></script>
+<!-- other sources -->
 <script src="./lib/leaflet.rotatedMarker.js"></script>
 <script src="FireDash.js"></script>
 
@@ -162,45 +199,49 @@ crossorigin=""></script>
 
 <body>
 <p style="margin-top: -1em;"></p>
-<table>
+<table id='table'>
     <tr>
-        <td>
-            <div id='road-search'>
-                <label for="forest">Forest: </label>
-                <select name='forest' id='forest'>
-                    <option value='0501'>ANF</option>
-                    <option value='0502'>CNF</option>
-                    <option value='0503' selected="selected">ENF</option>
-                    <option value='0504'>INF</option>
-                    <option value='0505'>KNF</option>
-                    <option value='0506'>LNF</option>
-                    <option value='0507'>LPF</option>
-                    <option value='0508'>MNF</option>
-                    <option value='0509'>MDF</option>
-                    <option value='0510'>SRF</option>
-                    <option value='0511'>PNF</option>
-                    <option value='0512'>BDF</option>
-                    <option value='0513'>SQF</option>
-                    <option value='0514'>SHF</option>
-                    <option value='0515'>SNF</option>
-                    <option value='0516'>STF</option>
-                    <option value='0517'>TNF</option>
-                    <option value='0519'>TMU</option>
-                </select>
-                <input id='search_bar' type='text'>
-                <span id='search-status' style='color:#bababa;font-size:75%'>Type a road name or id and press Enter to search</span>
-            </div>
+        <td id='viewer0'>
             <div id='mapDiv' style='height:100px;'>
                 <div id='map'>
-                    <button id='refresh' class="ui-button ui-widget ui-corner-all" style='width:20px;height:20px;padding:0;' title='Fullscreen'><span class="ui-icon ui-icon-arrow-4-diag"></span></button>
-                    <div id="day-panel">
-                            <div id="day-label"></div>
-                            <div id="day-slider" style="width:150px;"></div>
+                </div>
+                <div id='road-search'>
+                    <select name='forest' id='forest'>
+                        <option value='0501' title='Angeles'>ANF</option>
+                        <option value='0502' title='Cleveland'>CNF</option>
+                        <option value='0503' title='Eldorado' selected="selected">ENF</option>
+                        <option value='0504' title='Inyo'>INF</option>
+                        <option value='0505' title='Klamath'>KNF</option>
+                        <option value='0506' title='Lassen'>LNF</option>
+                        <option value='0507' title='Los Padres'>LPF</option>
+                        <option value='0508' title='Mendocino'>MNF</option>
+                        <option value='0509' title='Modoc'>MDF</option>
+                        <option value='0510' title='Six Rivers'>SRF</option>
+                        <option value='0511' title='Plumas'>PNF</option>
+                        <option value='0512' title='San Bernardino'>BDF</option>
+                        <option value='0513' title='Sequoia'>SQF</option>
+                        <option value='0514' title='Shasta-Trinity'>SHF</option>
+                        <option value='0515' title='Sierra'>SNF</option>
+                        <option value='0516' title='Stanislaus'>STF</option>
+                        <option value='0517' title='Tahoe'>TNF</option>
+                        <option value='0519' title='Lake Tahoe Basin Mgmt Unit'>TMU</option>
+                    </select>
+                    <div class="dropdown">
+                        <input id='search_bar' type='text' style='width:48ch;' placeholder='Type a feature name or ID and press Enter to search'>
+                        <div id='search_dropdown' class='dropdown-content'>
+                            <table id= 'search-table' style="width:100%"></table>
+                        </div>
                     </div>
+                    <span id='search-status' style='font-size:75%;font-style:italic;'></span>
+                </div>
+                <button id='refresh' class="ui-button ui-widget ui-corner-all" style='width:20px;height:20px;padding:0;' title='Fullscreen'><span class="ui-icon ui-icon-arrow-4-diag"></span></button>
+                <div id="day-panel">
+                        <div id="day-label"></div>
+                        <div id="day-slider" style="width:150px;"></div>
                 </div>
             </div>
         </td>
-        <td>
+        <td id='viewer1'>
             <div class='viewContainer'>
                 <img src="./lib/alert-tahoe-logo.png" id="camera0" class='cameraView' title='Select cameras from the map'>
                 <button class="ui-button ui-widget ui-corner-all" title='Fullscreen' style='width:20px;height:20px;padding:0;'><span class="ui-icon ui-icon-arrow-4-diag"></span></button>
@@ -209,14 +250,14 @@ crossorigin=""></script>
         </td>
     </tr>
     <tr>
-        <td>
+        <td id='viewer2'>
             <div class='viewContainer'>
                 <img src="./lib/alert-tahoe-logo.png" id="camera1" class='cameraView' title='Select cameras from the map'>
                 <button class="ui-button ui-widget ui-corner-all" title='Fullscreen' style='width:20px;height:20px;padding:0;'><span class="ui-icon ui-icon-arrow-4-diag"></span></button>
                 <img id='compass1' src='./lib/compass_ring.svg' class='compass'>
             </div>
         </td>
-        <td>
+        <td id='viewer3'>
             <div class='viewContainer'>
                 <img src="./lib/alert-tahoe-logo.png" id="camera2" class='cameraView' title='Select cameras from the map'>
                 <button class="ui-button ui-widget ui-corner-all" title='Fullscreen' style='width:20px;height:20px;padding:0;'><span class="ui-icon ui-icon-arrow-4-diag"></span></button>
@@ -229,14 +270,21 @@ crossorigin=""></script>
 <script>
 // refresh the cameras every 10 seconds
 setInterval(refreshCam, 10 * 1000);
+// Forest change event
+var forest = document.getElementById("forest");
+forest.addEventListener("change", function(event) {
+    event.preventDefault();
+    forestQuery(document.getElementById('forest').value);
+});
 // road search event
-var input = document.getElementById("search_bar");
-input.addEventListener("keyup", function(event) {
+var search_bar = document.getElementById("search_bar");
+search_bar.addEventListener("keyup", function(event) {
     event.preventDefault();
     if (event.keyCode === 13) {
-        var road = document.getElementById('search_bar').value
+        var text = document.getElementById('search_bar').value
         var security_id = document.getElementById('forest').value
-        roadQuery(security_id, road);
+        layerQuery(security_id, text);
+        document.getElementById("search_dropdown").style.display = 'inline';
     }
 });
 </script>
