--- a/FireCams.html
+++ b/FireCams.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html>
 
+
+<head>
+<title>Fire Dashboard</title>
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+<!--<meta http-equiv="refresh" content="60" />  Page refresh --> 
+<!-- google ajax CDN -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"></link>
+<script
+    src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+    integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+    crossorigin="anonymous"></script>
+<!-- ESRI CDN -->
+<script>
+//    var dojoConfig = {
+//        has: {
+//            "esri-featurelayer-webgl": 1
+//        }
+//    };
+</script>
+<link rel="stylesheet" href="https://js.arcgis.com/4.9/esri/themes/dark/main.css">
+<script src="https://js.arcgis.com/4.9/"></script>
+<!-- other sources -->
 <style>
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
-@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
 * {
     box-sizing: border-box;
-    font-family: 'Source Sans Pro', sans-serif;
 }
 h2, p {
 	padding: 0px;
@@ -85,99 +105,52 @@ tr,td {
 }
 #day-panel {
     visibility: hidden;
-    position: absolute;
-    left: 1em;
-    bottom: 1em;
     padding: 1em;
-    background-color: rgba(256, 256, 256, 0.8);
-    border-radius: 5px;
-    border: 1px solid rgb(40, 40, 40);
+    background-color: rgba(50, 50, 50, 0.85);
     z-index: 1000;
+    color: rgb(220, 220, 220);
 }
 #day-panel div {
     width: 10em;
+    color: rgb(220, 220, 220);
     z-index: 1000;
 }
-#road-search{
+#ttip {
+    display: none;
+    background-color: rgba(0, 0, 0, 0.75);
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    color: rgb(220, 220, 220);
+    font-size: 80%;
+    font-family: sans-serif;
     position: absolute;
-    top: 5px;
-    left: 60px;
     z-index: 1000;
 }
-/* Tooltip container */
-.tooltip {
-    position: relative;
-    display: inline;
-    border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+.esri-feature {
+    font-family: monospace;
+    background-color: rgba(50, 50, 50, 0.95);
+    color: rgb(220, 220, 220);
+    padding: 8px;
+    z-index: 1000;
+    white-space: pre;
+    max-width: 100%;
+    max-height: 300px;
+    overflow: auto;
 }
-/* Tooltip text */
-.tooltip .tooltiptext {
-    font-size: 75%;
-    white-space: normal;
-    display: block;
-    visibility: hidden;
-    width: 400px;
-    max-width:400px;
-    min-width:400px;
-    word-wrap: break-word;
-    background-color: black;
-    color: #fff;
-    text-align: left;
-    padding: 5px 5px;
-    border-radius: 6px;
- 
-    /* Position the tooltip text */
-    position: absolute;
-    z-index: 1;
+.close{
+    display: inline-block;
+    float: right;
+    top: 0;
+    position: sticky;
+    padding: 7px;
+    background: rgb(30, 30, 30);
+    color: rgb(170, 170, 170);
+    cursor: pointer;
+    
 }
-
-/* Show the tooltip text when you mouse over the tooltip container */
-.tooltip:hover .tooltiptext {
-    visibility: visible;
-}
-#forest{
-    margin-top: 3px;
-    //margin-bottom: 4px;
-}
-.custom-control{
-    border-radius: 4px;
-    padding: 3px;
-    border: 2px solid rgba(0, 0, 0, 0.25);
-}
-</style>
-<head>
-<title>Fire Dashboard</title>
-<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-<!--<meta http-equiv="refresh" content="60" />  Page refresh --> 
-<!-- google ajax CDN -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"></link>
-<script
-    src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
-    integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
-    crossorigin="anonymous"></script>
-<!-- Load Leaflet from CDN -->
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css"
-integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
-crossorigin=""/>
-<script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
-integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
-crossorigin=""></script>
-<!-- Load Esri Leaflet from CDN -->
-<script src="https://unpkg.com/esri-leaflet@2.2.3/dist/esri-leaflet.js"
-integrity="sha512-YZ6b5bXRVwipfqul5krehD9qlbJzc6KOGXYsDjU9HHXW2gK57xmWl2gU6nAegiErAqFXhygKIsWPKbjLPXVb2g=="
-crossorigin=""></script>
-<script src="https://unpkg.com/esri-leaflet-renderers@2.0.6"></script>
-<!-- Load Esri Leaflet Geocoder from CDN -->
-<link rel="stylesheet" href="https://unpkg.com/esri-leaflet-geocoder@2.2.13/dist/esri-leaflet-geocoder.css"
-integrity="sha512-v5YmWLm8KqAAmg5808pETiccEohtt8rPVMGQ1jA6jqkWVydV5Cuz3nJ9fQ7ittSxvuqsvI9RSGfVoKPaAJZ/AQ=="
-crossorigin="">
-<script src="https://unpkg.com/esri-leaflet-geocoder@2.2.13/dist/esri-leaflet-geocoder.js"
-integrity="sha512-zdT4Pc2tIrc6uoYly2Wp8jh6EPEWaveqqD3sT0lf5yei19BC1WulGuh5CesB0ldBKZieKGD7Qyf/G0jdSe016A=="
-crossorigin=""></script>
-<!-- other sources -->
-<script src="./lib/leaflet.rotatedMarker.js"></script>
-<script src="FireDash.js"></script>
+</style><script src="FireDash.js"></script>
 
 </head>
 
@@ -186,13 +159,13 @@ crossorigin=""></script>
     <tr>
         <td id='viewer0'>
             <div id='mapDiv' style='height:100px;'>
-                <div id='map'>
-                </div>
+                <div id='map'></div>
                 <button id='refresh' class="ui-button ui-widget ui-corner-all" style='width:20px;height:20px;padding:0;' title='Fullscreen'><span class="ui-icon ui-icon-arrow-4-diag"></span></button>
                 <div id="day-panel">
                         <div id="day-label"></div>
                         <div id="day-slider" style="width:150px;"></div>
                 </div>
+                <span id='ttip'></span>
             </div>
         </td>
         <td id='viewer1'>
