added Snow depth (in) to legend

--- a/snowMap.html
+++ b/snowMap.html
@@ -101,7 +101,8 @@
         opacity: 0.6,
         sublayers: [{
                 id: 3,
-                visible: true
+                visible: true,
+                title: 'Snow Depth (in)'
             }
         ]
       });
