ArcGIS JS API 4.11

--- a/trafficMap.html
+++ b/trafficMap.html
@@ -10,8 +10,8 @@
     crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"></link>
 <!-- Reference the JavaScript API from our CDN and you are ready to get started: -->
-<link rel="stylesheet" href="https://js.arcgis.com/4.9/esri/themes/dark/main.css">
-<script src="https://js.arcgis.com/4.9/"></script>
+<link rel="stylesheet" href="https://js.arcgis.com/4.11/esri/themes/dark/main.css">
+<script src="https://js.arcgis.com/4.11/"></script>
 <script>
 String.prototype.format = function () {
   var i = 0, args = arguments;
