arcgis js api version

--- a/trafficMap.html
+++ b/trafficMap.html
@@ -10,8 +10,8 @@
     crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"></link>
 <!-- Reference the JavaScript API from our CDN and you are ready to get started: -->
-<link rel="stylesheet" href="https://js.arcgis.com/4.11/esri/themes/dark/main.css">
-<script src="https://js.arcgis.com/4.11/"></script>
+<link rel="stylesheet" href="https://js.arcgis.com/4.9/esri/themes/dark/main.css">
+<script src="https://js.arcgis.com/4.9/"></script>
 <script>
 String.prototype.format = function () {
   var i = 0, args = arguments;
@@ -44,7 +44,7 @@ var map, view,
     caltransLane_url = 'http://quickmap.dot.ca.gov/data/lcs2way.kml',
     caltransCHP_url = 'http://quickmap.dot.ca.gov/data/chp-only.kml',
     caltransClosure_url = 'http://quickmap.dot.ca.gov/data/fullClosure.kml',
-    caltransInfo_url = 'http://quickmap.dot.ca.gov/data/chin.kml'
+    caltransInfo_url = 'http://quickmap.dot.ca.gov/data/chin.kml',
     caltransChain_url = 'http://quickmap.dot.ca.gov/data/cc.kml',
     caltransSnow_url = 'http://quickmap.dot.ca.gov/data/snow_plow.kml',
     caltransSign_url = 'http://quickmap.dot.ca.gov/data/cms.kml',
